crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier2__lists__I068-list-range.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier2/lists/I068-list-range
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [] === PASS
> "Pound, Pizza, Euro, Pasta, Dollar, Curry, Paella\n" [Continue]
> "Euro, Pasta, Dollar, Curry\n" [Continue]
> "Two, Three, Four, Five, Six\n" [Continue]
> "Pizza, Pasta\n" [Done]
outcome: Done
