crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier2__lists__I073-empty-list-origin.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier2/lists/I073-empty-list-origin
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [] === PASS
> "a, b\n" [Done]
outcome: Done
