crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier2__lists__I074-list-random.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier2/lists/I074-list-random
oracle: 1, brink: 1, matched: 1
passing: 0/1

=== episode [] === FAIL
> "B\n" [Continue]
> "B\n" [Continue]
> "B\n" [Continue]
> "C\n" [Continue]
> "D\n" [Continue]
> "C\n" [Continue]
> "B\n" [Continue]
> "C\n" [Continue]
> "B\n" [Continue]
> "C\n" [Done]
outcome: Done
  step 1: text differs
    oracle: "D\n"
    brink:  "B\n"
  step 3: text differs
    oracle: "D\n"
    brink:  "C\n"
  step 4: text differs
    oracle: "C\n"
    brink:  "D\n"
  step 5: text differs
    oracle: "D\n"
    brink:  "C\n"
  step 6: text differs
    oracle: "D\n"
    brink:  "B\n"
  step 7: text differs
    oracle: "D\n"
    brink:  "C\n"
