crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier2__lists__basic-operations.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier2/lists/basic-operations
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [] === PASS
> "b, d\n" [Continue]
> "a, b, c, e\n" [Continue]
> "b, c\n" [Continue]
> "false\n" [Continue]
> "true\n" [Continue]
> "true\n" [Done]
outcome: Done
