crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier2__lists__list-all.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier2/lists/list-all
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [] === PASS
> "A, B\n" [Done]
outcome: Done
